--- a/jam/.project
+++ b/jam/.project
@@ -46,12 +46,12 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1740915256831</id>
+			<id>1741272813600</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
 				<id>org.eclipse.core.resources.regexFilterMatcher</id>
-				<arguments>1.0-name-matches-false-true-node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
