--- a/jam/.project
+++ b/jam/.project
@@ -43,6 +43,7 @@
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
+		<nature>org.eclipse.wildwebdeveloper.javascriptNature</nature>
 	</natures>
 	<filteredResources>
 		<filter>
