--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Build WAR with Maven
         working-directory: ./jam
-        run: mvn -B clean package -DskipTests
+        run: mvn -B clean package -Dmaven.test.skip=true
 
       - name: Copy WAR to EC2
         uses: appleboy/scp-action@v0.1.5
