--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY_JAM }}
           source: "jam/target/client-1.0.0-BUILD-SNAPSHOT.war"
           target: "/opt/tomcat/tomcat9/webapps/ROOT.war"
+          overwrite: true
+          strip_components: 0
 
       - name: Restart Tomcat on EC2
         uses: appleboy/ssh-action@v0.1.10
