--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY_JAM }}
           source: "jam/target/client-1.0.0-BUILD-SNAPSHOT.war"
-          target: "/opt/tomcat/tomcat9/webapps/"
+          target: "/home/ec2-user/"
           overwrite: true
           tar: false
 
@@ -46,16 +46,15 @@ jobs:
             sudo rm -rf /opt/tomcat/tomcat9/webapps/ROOT
 
             # 2. 새로 올라온 war 파일 있는지 확인 (가끔 scp 실패함)
-            if [ ! -f "/opt/tomcat/tomcat9/webapps/client-1.0.0-BUILD-SNAPSHOT.war" ]; then
+            if [ ! -f "/home/ec2-user/client-1.0.0-BUILD-SNAPSHOT.war" ]; then
               echo "WAR 파일이 복사되지 않았습니다. 배포 중단"
               exit 1
             fi
 
             # 3. ROOT.war로 이름 변경
-            sudo mv /opt/tomcat/tomcat9/webapps/client-1.0.0-BUILD-SNAPSHOT.war \
+            sudo mv /home/ec2-user/client-1.0.0-BUILD-SNAPSHOT.war \
                     /opt/tomcat/tomcat9/webapps/ROOT.war
 
-            # 4. 소유자 맞춰주기 (tomcat이 안 읽으면 404 남)
             sudo chown ec2-user:ec2-user /opt/tomcat/tomcat9/webapps/ROOT.war
 
             # 5. Tomcat 완전히 종료
