--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY_JAM }}
           source: "jam/target/client-1.0.0-BUILD-SNAPSHOT.war"
-          target: "/home/ec2-user/client.war"
+          target: "/home/ec2-user"
           overwrite: true
 
       - name: Deploy & Restart Tomcat
@@ -48,13 +48,13 @@ jobs:
             sudo rm -rf /opt/tomcat/tomcat9/webapps/ROOT
 
             # 2. 새로 올라온 war 파일 있는지 확인
-            if [ ! -f "/home/ec2-user/client.war" ]; then
+            if [ ! -f "/home/ec2-user/client-1.0.0-BUILD-SNAPSHOT.war" ]; then
               echo "WAR 파일이 복사되지 않았습니다. 배포 중단"
               exit 1
             fi
 
             # 3. ROOT.war로 이름 변경
-            sudo mv /home/ec2-user/client.war \
+            sudo mv /home/ec2-user/client-1.0.0-BUILD-SNAPSHOT.war \
                     /opt/tomcat/tomcat9/webapps/ROOT.war
 
             sudo chown ec2-user:ec2-user /opt/tomcat/tomcat9/webapps/ROOT.war
