--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package -DskipTests
+      working-directory: ./jam
 
     - name: Copy WAR file to EC2
       uses: appleboy/scp-action@v0.1.7
@@ -28,7 +29,7 @@ jobs:
         host: ${{ secrets.EC2_HOST }}
         username: ec2-user
         key: ${{ secrets.EC2_KEY }}
-        source: "target/*.war"
+        source: "jam/target/*.war"
         target: "/home/ec2-user/tomcat/webapps/"
         overwrite: true
 
