--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         java-version: '17'
 
     - name: Build with Maven
-      run: mvn -B package -DskipTests
+      run: mvn -B package -Dmaven.test.skip=true
       working-directory: ./jam
 
     - name: Copy WAR file to EC2
