--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         username: ec2-user
         key: ${{ secrets.EC2_KEY }}
         source: "/home/runner/work/JAM/JAM/jam/target/jam.war"
-        target: "/home/ec2-user/tomcat/webapps/ROOT.war"
+        target: "/home/ec2-user/tomcat/webapps/"
         overwrite: true
 
     - name: Restart Tomcat on EC2
@@ -49,4 +49,5 @@ jobs:
         key: ${{ secrets.EC2_KEY }}
         script: |
           pkill -f tomcat || true
+          mv /home/ec2-user/tomcat/webapps/jam.war /home/ec2-user/tomcat/webapps/ROOT.war
           /home/ec2-user/tomcat/bin/startup.sh
