--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,24 +31,41 @@ jobs:
         echo "SEARCHING:"
         find /home/runner/work/JAM/JAM -name "*.war" -type f
 
-    - name: Copy WAR file to EC2
-      uses: appleboy/scp-action@v0.1.7
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ec2-user
-        key: ${{ secrets.EC2_KEY }}
-        source: "jam/target/jam.war"
-        target: "/home/ec2-user/tomcat/webapps/"
-        overwrite: true
-
+    - name: Copy WAR file with native scp
+      env:
+        EC2_KEY: ${{ secrets.EC2_KEY }}
+      run: |
+        echo "$EC2_KEY" > /tmp/ec2_key.pem
+        chmod 400 /tmp/ec2_key.pem
+    
+        WAR_FILE=$(find "$GITHUB_WORKSPACE/jam/target" -name "*.war" -type f | head -n 1)
+        if [ -z "$WAR_FILE" ]; then
+          echo "ERROR: WAR 파일을 찾을 수 없습니다"
+          exit 1
+        fi
+    
+        echo "배포할 WAR 파일: $WAR_FILE"
+        ls -lh "$WAR_FILE"
+    
+        scp -v -o StrictHostKeyChecking=no -i /tmp/ec2_key.pem \
+          "$WAR_FILE" \
+          ec2-user@${{ secrets.EC2_HOST }}:/home/ec2-user/tomcat/webapps/ROOT.war
+    
+        rm -f /tmp/ec2_key.pem
+    
+    
     - name: Restart Tomcat on EC2
-      uses: appleboy/ssh-action@v0.1.7
+      uses: appleboy/ssh-action@v0.1.8
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ec2-user
         key: ${{ secrets.EC2_KEY }}
         script: |
+          echo "기존 Tomcat 종료 중..."
           pkill -f tomcat || true
-          mv /home/ec2-user/tomcat/webapps/jam.war /home/ec2-user/tomcat/webapps/ROOT.war
-          cd /home/ec2-user/tomcat
+          sleep 3
+    
+          echo "Tomcat 재시작..."
           /home/ec2-user/tomcat/bin/startup.sh
+    
+          echo "배포 완료"
