--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,13 +93,12 @@ jobs:
         username: ec2-user
         key: ${{ secrets.EC2_KEY }}
         script: |
-          export CATALINA_HOME=/home/ec2-user/tomcat 
           echo "기존 Tomcat 종료 중..."
-          
-          $CATALINA_HOME/bin/shutdown.sh || true 
           pkill -f 'org.apache.catalina.startup.Bootstrap' || true
+          pkill -f 'java' || true
           sleep 5
           
+          echo "권한 복구..."
           sudo chown -R ec2-user:ec2-user /home/ec2-user/tomcat
           
           echo "Tomcat 재시작..."
