--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,7 +95,7 @@ jobs:
         script: |
           echo "기존 Tomcat 종료 중..."
           pkill -f 'org.apache.catalina.startup.Bootstrap' || true
-          pkill -f 'java' || true
+          pkill -f 'tomcat' || true
           sleep 5
           
           echo "권한 복구..."
