--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,20 +93,31 @@ jobs:
         username: ec2-user
         key: ${{ secrets.EC2_KEY }}
         script: |
-          echo "기존 Tomcat 종료 중..."
-          pkill -f 'org.apache.catalina.startup.Bootstrap' || true
-          pkill -f 'tomcat' || true
-          sleep 5
+          echo $JAVA_HOME
+          which java || echo "java 없음"
+          java -version || echo "java 실행 실패"
+
+          echo $PATH | tr ':' '\n' | head -n 20
+          ls -l /usr/bin/java
+
+          readlink -f /usr/bin/java || echo "readlink 실패"
+          HEADLESS=true /home/ec2-user/tomcat/bin/setclasspath.sh >/dev/null 2>&1 || true
+          echo $JAVA_HOME
           
-          echo "권한 복구..."
-          sudo chown -R ec2-user:ec2-user /home/ec2-user/tomcat
+          #echo "기존 Tomcat 종료 중..."
+          #pkill -f 'org.apache.catalina.startup.Bootstrap' || true
+          #pkill -f 'tomcat' || true
+          #sleep 5
           
-          echo "Tomcat 재시작..."
+          #echo "권한 복구..."
+          #sudo chown -R ec2-user:ec2-user /home/ec2-user/tomcat
+          
+          #echo "Tomcat 재시작..."
           # 디버깅용
-          nohup /home/ec2-user/tomcat/bin/catalina.sh run > /home/ec2-user/tomcat/logs/catalina.out 2>&1 &
+          #nohup /home/ec2-user/tomcat/bin/catalina.sh run > /home/ec2-user/tomcat/logs/catalina.out 2>&1 &
 
           # nohup /home/ec2-user/tomcat/bin/startup.sh > /home/ec2-user/tomcat/logs/nohup.out 2>&1 &
 
-          echo "배포 완료. 5초 후 로그 확인 시작..."
-          sleep 5
-          /usr/bin/tail -n 10 /home/ec2-user/tomcat/logs/catalina.out
+          #echo "배포 완료. 5초 후 로그 확인 시작..."
+          #sleep 5
+          #/usr/bin/tail -n 10 /home/ec2-user/tomcat/logs/catalina.out
