--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,30 +92,18 @@ jobs:
         host: ${{ secrets.EC2_HOST }}
         username: ec2-user
         key: ${{ secrets.EC2_KEY }}
-        script: |
-          #echo $JAVA_HOME
-          #which java || echo "java 없음"
-          #java -version || echo "java 실행 실패"
-
-          #echo $PATH | tr ':' '\n' | head -n 20
-          #ls -l /usr/bin/java
-
-          #readlink -f /usr/bin/java || echo "readlink 실패"
-          #HEADLESS=true /home/ec2-user/tomcat/bin/setclasspath.sh >/dev/null 2>&1 || true
-          #echo $JAVA_HOME
-          
+        script: |          
           #echo "기존 Tomcat 종료 중..."
-          #pkill -f 'org.apache.catalina.startup.Bootstrap' || true
-          #pkill -f '/home/ec2-user/tomcat' || true
-          #sleep 5
+          pkill -f 'org.apache.catalina.startup.Bootstrap' || true
+          sleep 5
           
           #echo "권한 복구..."
-          #sudo chown -R ec2-user:ec2-user /home/ec2-user/tomcat
+          sudo chown -R ec2-user:ec2-user /home/ec2-user/tomcat
           
           #echo "Tomcat 재시작..."
           export JAVA_HOME=/usr/lib/jvm/java-17-amazon-corretto.x86_64 
           setsid /home/ec2-user/tomcat/bin/catalina.sh start > /home/ec2-user/tomcat/logs/catalina.out 2>&1 < /dev/null &
 
           #echo "배포 완료. 5초 후 로그 확인 시작..."
-          #sleep 5
-          #/usr/bin/tail -n 10 /home/ec2-user/tomcat/logs/catalina.out
+          sleep 5
+          /usr/bin/tail -n 10 /home/ec2-user/tomcat/logs/catalina.out
