--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,17 +93,17 @@ jobs:
         username: ec2-user
         key: ${{ secrets.EC2_KEY }}
         script: |          
-          #echo "기존 Tomcat 종료 중..."
+          echo "기존 Tomcat 종료 중..."
           pkill -f 'org.apache.catalina.startup.Bootstrap' || true
           sleep 5
           
-          #echo "권한 복구..."
+          echo "권한 복구..."
           sudo chown -R ec2-user:ec2-user /home/ec2-user/tomcat
           
-          #echo "Tomcat 재시작..."
+          echo "Tomcat 재시작..."
           export JAVA_HOME=/usr/lib/jvm/java-17-amazon-corretto.x86_64 
           setsid /home/ec2-user/tomcat/bin/catalina.sh start > /home/ec2-user/tomcat/logs/catalina.out 2>&1 < /dev/null &
 
-          #echo "배포 완료. 5초 후 로그 확인 시작..."
+          echo "배포 완료. 5초 후 로그 확인 시작..."
           sleep 5
           /usr/bin/tail -n 10 /home/ec2-user/tomcat/logs/catalina.out
