--- a/jam/pom.xml
+++ b/jam/pom.xml
@@ -125,10 +125,7 @@
 		    <artifactId>sockjs-client</artifactId>
 		    <version>1.5.1</version>
 		</dependency>
-
 		
-		
-
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -448,6 +445,12 @@
 		    <groupId>org.jsoup</groupId>
 		    <artifactId>jsoup</artifactId>
 		    <version>1.17.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>${org.springframework-version}</version>
 		</dependency>
 	</dependencies>
 	
