--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
         location.consumer_secret=${{ secrets.LOCATION_CONSUMER_SECRET }}
         location.save.path=${{ secrets.LOCATION_SAVE_PATH }}
 
-        cloud.aws.s3.static=ap-northeast-2
+        cloud.aws.s3.static=${{ secrets.AWS_DEFAULT_REGION }}
         cloud.aws.s3.bucket=jam-resume-bucket
         EOF  
 
@@ -93,6 +93,11 @@ jobs:
         username: ec2-user
         key: ${{ secrets.EC2_KEY }}
         script: |          
+          echo "AWS 환경변수 설정..."
+          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          export AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}
+          
           echo "기존 Tomcat 종료 중..."
           sudo fuser -k 8080/tcp || true
           sleep 3
