chore(deploy): FILE_UPLOAD_DIR 시크릿 연동

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,8 @@ jobs:
 
         cloud.aws.s3.static=${{ secrets.AWS_DEFAULT_REGION }}
         cloud.aws.s3.bucket=jam-resume-bucket
+
+        file.upload-dir=${{ secrets.FILE_UPLOAD_DIR }}
         EOF  
 
     - name: Set up JDK 17
