--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
         spring.redis.host=${{ secrets.REDIS_HOST }}
         spring.redis.port=${{ secrets.REDIS_PORT }}
         spring.redis.database=0
+        spring.redisson.address=${{ secrets.redisson_address }}
 
         spring.mail.username=${{ secrets.MAIL_USERNAME }}
         spring.mail.password=${{ secrets.MAIL_PASSWORD }}
