--- a/jam/pom.xml
+++ b/jam/pom.xml
@@ -16,6 +16,19 @@
 		<maven.compiler.target>17</maven.compiler.target>
 
 	</properties>
+	
+	<dependencyManagement>
+	    <dependencies>
+	        <dependency>
+	            <groupId>software.amazon.awssdk</groupId>
+	            <artifactId>bom</artifactId>
+	            <version>2.40.8</version> 
+	            <type>pom</type>
+	            <scope>import</scope>
+	        </dependency>
+	    </dependencies>
+	</dependencyManagement>
+	
 	<dependencies>
 		<!-- Source: https://mvnrepository.com/artifact/io.netty/netty-all -->
 		<dependency>
@@ -420,15 +433,38 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.12.0</version>
 		</dependency>
-	
-		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
-		<dependency>
-		    <groupId>software.amazon.awssdk</groupId>
-		    <artifactId>s3</artifactId>
-		    <version>2.32.26</version>
-		    <scope>compile</scope>
-		</dependency>
 		
+		<!-- S3 기본 클라이언트와 Presigner-->
+	    <dependency>
+	        <groupId>software.amazon.awssdk</groupId>
+	        <artifactId>s3</artifactId>
+	        <exclusions>
+		        <exclusion>
+		            <groupId>io.netty</groupId>
+		            <artifactId>*</artifactId>
+		        </exclusion>
+		    </exclusions>
+	    </dependency>
+	
+	    <dependency>
+	        <groupId>software.amazon.awssdk</groupId>
+	        <artifactId>auth</artifactId>
+	    </dependency>
+	
+	    <dependency>
+	        <groupId>software.amazon.awssdk</groupId>
+	        <artifactId>identity-spi</artifactId>
+	    </dependency>
+	
+	    <dependency>
+	        <groupId>software.amazon.awssdk</groupId>
+	        <artifactId>regions</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>software.amazon.awssdk</groupId>
+	        <artifactId>apache-client</artifactId>  
+	    </dependency> 
+	    
 		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
