--- a/jam/pom.xml
+++ b/jam/pom.xml
@@ -43,6 +43,7 @@
 		    <groupId>com.sun.mail</groupId>
 		    <artifactId>javax.mail</artifactId>
 		    <version>1.6.2</version>
+		    <scope>compile</scope>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
@@ -91,12 +92,12 @@
 		    <version>5.0.6.RELEASE</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core-->
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-core</artifactId>
 		    <version>5.0.6.RELEASE</version>
-		</dependency>
+		</dependency> 
 		
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
 		<dependency>
@@ -104,26 +105,6 @@
 		    <artifactId>spring-security-taglibs</artifactId>
 		    <version>5.0.6.RELEASE</version>
 		</dependency>
-		
-		<!-- Thymeleaf
-	    <dependency>
-	        <groupId>org.thymeleaf</groupId>
-	        <artifactId>thymeleaf</artifactId>
-	        <version>3.0.12.RELEASE</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>org.thymeleaf</groupId>
-	        <artifactId>thymeleaf-spring5</artifactId>
-	        <version>3.0.12.RELEASE</version>
-	    </dependency> -->
-	
-	    <!-- Thymeleaf Extras for Spring Security 5
-	    <dependency>
-	        <groupId>org.thymeleaf.extras</groupId>
-	        <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-	        <version>3.0.4.RELEASE</version>
-	    </dependency> -->
-
 
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
 		<dependency>
@@ -340,7 +321,6 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
-
 
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<!-- json 변환 -->
