chore: .gitignore 설정 업데이트
- Redis 데이터 파일(dump.rdb, appendonly.aof) 및 IDE 설정 파일 무시 규칙 추가

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@ Servers/
 application.properties
 application.yml
 
+# Redis
+dump.rdb
+appendonly.aof
+
+# IDE
+.factorypath
+
 *.log
 *.tmp
 *.bak
