--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Create application.yaml
       run: |
-        cat > src/main/resources/application.yaml << 'EOF'
+        cat << 'EOF' > src/main/resources/application.yaml
         spring:
           datasource:
             url: ${{ secrets.DB_URL }}
@@ -66,7 +66,7 @@ jobs:
 
         cors:
           allowed-origins: ${{ secrets.CORS_ALLOWED_ORIGINS }}
-        EOF 
+        EOF
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
