--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,62 +12,7 @@ jobs:
     steps:
     - name: Checkout source
       uses: actions/checkout@v4
-
-    - name: Create application.yaml
-      run: |
-        cat << 'EOF' > src/main/resources/application.yaml
-        spring:
-          datasource:
-            url: ${{ secrets.DB_URL }}
-            username: ${{ secrets.DB_USERNAME }}
-            password: ${{ secrets.DB_PASSWORD }}
-          redis:
-            host: ${{ secrets.REDIS_HOST }}
-            port: ${{ secrets.REDIS_PORT }}
-            database: 0
-          redisson:
-            address: ${{ secrets.REDISSON_ADDRESS }}
-          mail:
-            username: ${{ secrets.MAIL_USERNAME }}
-            password: ${{ secrets.MAIL_PASSWORD }}
-
-        server:
-          servlet:
-            encoding:
-              force: true
-              force-response: true
-              charset: UTF-8
-
-        jwt:
-          secret: ${{ secrets.JWT_SECRET }}
-
-        oauth:
-          naver:
-            clientId: ${{ secrets.NAVER_CLIENT_ID }}
-            clientSecret: ${{ secrets.NAVER_CLIENT_SECRET }}
-            redirectUri: ${{ secrets.NAVER_REDIRECT_URI }}
-          kakao:
-            clientId: ${{ secrets.KAKAO_CLIENT_ID }}
-            redirectUri: ${{ secrets.KAKAO_REDIRECT_URI }}
-
-        location:
-          consumer_key: ${{ secrets.LOCATION_CONSUMER_KEY }}
-          consumer_secret: ${{ secrets.LOCATION_CONSUMER_SECRET }}
-          save:
-            path: ${{ secrets.LOCATION_SAVE_PATH }}
-
-        cloud:
-          aws:
-            s3:
-              bucket: jam-resume-bucket
-
-        file:
-          upload-dir: ${{ secrets.FILE_UPLOAD_DIR }}
-
-        cors:
-          allowed-origins: ${{ secrets.CORS_ALLOWED_ORIGINS }}
-        EOF
-
+      
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -129,7 +74,7 @@ jobs:
           
           echo "애플리케이션 재시작..."
           echo "===== DEPLOY $(date '+%Y-%m-%d %H:%M:%S') =====" >> /home/ec2-user/app.log
-          nohup java -jar /home/ec2-user/app.jar >> /home/ec2-user/app.log 2>&1 &
+          nohup java -jar -Dspring.config.location=file:/home/ec2-user/application.yaml /home/ec2-user/app.jar >> /home/ec2-user/app.log 2>&1 &
 
           echo "배포 완료. 5초 후 로그 확인 시작..."
           sleep 5
